# shiny

./: Cargo.toml  default.nix
src/: allocation.rs  cli.rs  main.rs  operations.rs
src/debugger/: mod.rs
src/engine/: export.rs  mod.rs  module.rs  prelude.rs  stack.rs  store.rs
src/engine/op/: block.rs  br.rs  call.rs  call_indirect.rs  global_get.rs  global_set.rs  local_set.rs  memory_grow.rs  memory_size.rs  mod.rs  select.rs
src/tests/: mod.rs  wasm.rs  wat.rs
testrunner2/: Cargo.toml
testrunner2/src/: core.rs  json.rs  main.rs
validation/src/: lib.rs  main.rs
wasm_parser/: Cargo.toml
wasm_parser/benches/: arithmetic.rs
wasm_parser/src/: core.rs  instructions.rs  leb128.rs  lib.rs  main.rs
