[package]
name = "shiny"
version = "0.1.0"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

[workspace]
members = [
	"wasm_parser",
	"validation",
	"testrunner2",
]

[lib]
path  = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "funky"

[[bin]]
path = "testrunner2/src/main.rs"
name = "testrunner2"

[[bin]]
path = "wasm_parser/src/main.rs"
name = "wasm_parser"


[dependencies]
validation = { path = "./validation" }
wasm-parser = { path = "./wasm_parser" }
env_logger = "0.7"
log = { version = "*", features = ["release_max_level_off"] }
docopt = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.56" 
regex = "1"
anyhow = "1.0.32"
structopt = { version = "0.3", default-features = false }
dot = "0.1.4"

[dev-dependencies]
insta = "*"
tempfile = "*"